--- a/deps/Makefile
+++ b/deps/Makefile
@@ -8,6 +8,7 @@ BUILDDIR := scratch
 else
 BUILDDIR := .
 endif
+env_OS := $(OS)# get the real value of the OS variable, since we are unforunately obliterating the SuiteSparse build with our variable
 include $(SRCDIR)/Versions.make
 include $(JULIAHOME)/Make.inc
 include $(SRCDIR)/tools/common.mk
